<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#D11919"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFE3E3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="400dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="41dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/tel"
                app:srcCompat="@drawable/ic_baseline_email_24" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="550dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/red_blood_cells_1920x1080" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/profilee" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/sara_chakir"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="229dp"
            android:layout_height="25dp"
            android:layout_marginStart="100dp"
            android:text="@string/myenail"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="335dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="365dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.991">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="39dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/phoneicon"
                app:srcCompat="@drawable/ic_baseline_phone_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="229dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:text="@string/_212_615739233"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="370dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="330dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/adresse"
                app:srcCompat="@drawable/ic_baseline_home_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="229dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:text="@string/addr"
            android:textColor="#616161"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="405dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="295dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/gend"
                app:srcCompat="@drawable/ic_baseline_female_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="229dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:text="@string/gender"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="440dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="260dp"
            android:background="@drawable/background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="39dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/tt"
                app:srcCompat="@drawable/ic_baseline_bloodtype_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="229dp"
            android:layout_height="25dp"
            android:layout_marginStart="120dp"
            android:text="@string/groupe"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout9"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="247dp"
            android:layout_height="53dp"
            android:buttonTint="#C82020"
            android:checked="true"
            android:text="@string/i_want_to_be_a_donor"
            android:textColorHighlight="#AF0D0D"
            android:textColorLink="#B80909"
            app:buttonIconTint="#D51212"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
            app:layout_constraintVertical_bias="0.066" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#D11818"
            android:backgroundTint="#981414"
            android:text="@string/edit"
            android:textColor="#FFFCFC"
            android:textColorHighlight="@android:color/holo_red_dark"
            android:textColorLink="#B50707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:rippleColor="#A60E0E"
            app:strokeColor="#8A1C1C" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
